--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,24 @@
-[egg_info]
-tag_build =
-tag_date = 0
+[metadata]
+name = bestchange_api
+version = 1.0.0.3
+url = https://maksam07.com
+author = maksam07
+author_email = maksam07@gmail.com
+description = Библиотека для работы с "api" сервиса bestchange.ru
+long_description = file: README.md
+long_description_content_type = text/markdown
+classifiers =
+    License :: OSI Approved :: BSD License
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+project_urls =
+    Source = https://github.com/maksam07/bestchange_api
+
+[options]
+packages = bestchange_api
+python_requires = >=3.8
+zip_safe = False
